Tilføjelser af beskrivelser og ændringer af sådan fungerer det siden

--- a/annulleret.html
+++ b/annulleret.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Denne side viser at du har annuleret din ordre hos Nippon, derudover er der et link til byg-selv siden, hvor man kan læse om måltidskasserne. ">
 
 </head>
 <body>
