--- a/byg-selv.html
+++ b/byg-selv.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="På denne side kan du bygge din egen måltidskasse, du kan vælge antal af personer og dage. Derudover har du et overblik over de mulige retter og til sidst kan du bestille din måltidskasse">
 
 </head>
 <body>
