--- a/din-kurv.html
+++ b/din-kurv.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="På denne side får du et overblik over din kurv og hvilken måltidskasse du har valgt. Du kan ændre din ordre, anullere den eller bestille det valgte.">
 
 </head>
 <body>
