--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="På denne side kan du læse de mest stillede spørgsmål til Nippon samt svarene derttil. Hvis ikke disse kan bruges, får du også info om Nippons kundeservice.">
 
 </head>
 <body>
