--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Dette er forsiden til Nippon. Her får du præsenteret de forskellige måltidskasser, links til de andre sider samt mulighed for at tilmelde dig.  ">
 
 </head>
 <body>
