--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Denne side er en infographic, der forklare hvordan Nippon fungerer.">
 
 </head>
 <body>
@@ -81,7 +81,7 @@
         <h1 class="undersideh1">Sådan fungerer det</h1>
 
         <p class="info-sadan-fungerer-det">
-            Nedenfor kan du se rejsen for vores måltidskasser, lige fra bestillingen til sorteringen af emballagen.
+            Nedenfor kan du se rejsen for vores måltidskasser, <br> lige fra bestillingen til sorteringen af emballagen.
         </p>
         <p class="info-sadan-fungerer-det">Rul ned langs siden og følg rejsen.</p>
 
