--- a/succes.html
+++ b/succes.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Dette er en bekræftelse på at du har bestilt din ordre og at den er på vej til dig.">
 
 </head>
 <body>
