--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="På denne side har du mulighed for at logge ind, hvis du allerede har en bruger hos Nippon eller oprette en ny.">
 
 </head>
 <body>
