--- a/ups.html
+++ b/ups.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Dette er en 404-side, som desværre ikke eksisterer. Du har mulighed for at bruge links til måltidskasser og sådan fungerer det. ">
 
 </head>
 <body>
