--- a/yasai-kassen.html
+++ b/yasai-kassen.html
@@ -16,7 +16,7 @@
     <meta name="geo.position" content="56.223769;10.123814">
     <meta name="ICBM" content="56.223769, 10.123814">
     <meta name="author" content="Andrea Skadhede, Karoline Eriksen, Louise Thysen & Natasja Sandfeld">
-    <meta name="description" content="">
+    <meta name="description" content="Denne side viser måltidskassen Yasai, hvor du kan vælge ugens menu, antal personer og dage. Til sidst kan du bestille den valgte kasse.">
 
 </head>
 <body>
