--- a/index.html
+++ b/index.html
@@ -145,23 +145,24 @@
             Tilmeld dig
         </button>
 
-        <a href="faq.html">
-        <section class="solid">
-            <div class="faqa">
-                <div class="faqb">
-                <h2>FAQ</h2>
-                <p>Her ser du<br>vores oftest stillede<br>spørgsmål. 
-                <br>
-                <br>
-                Fandt du ikke det<br>du ledte efter,<br>så læs mere her.</p>
+        <a href="faq.html" class="solid">
+            <section>
+                <div class="faqa">
+                    <div class="faqb">
+                        <h2>FAQ</h2>
+                        <p>Her ser du<br>vores oftest stillede<br>spørgsmål. 
+                        <br>
+                        <br>
+                        Fandt du ikke det<br>du ledte efter,<br>så læs mere her.</p>
+                    </div>
+                    
+                    <div class="sporgsmal">
+                        <div class="svar"><p>Hvordan sorterer jeg emballagen?</p></div>
+                        <div class="svar"><p>Hvordan ændre jeg min måltidskasse?</p></div>
+                        <div class="svar"><p>Hvordan fungerer levering?</p></div>
+                    </div>
                 </div>
-            <div class="sporgsmal">
-                <div class="svar"><p>Hvordan sorterer jeg emballagen?</p></div>
-                <div class="svar"><p>Hvordan ændre jeg min måltidskasse?</p></div>
-                <div class="svar"><p>Hvordan fungerer levering?</p></div>
-            </div>
-            </div>
-        </section>
+            </section>
         </a>
 
         <section class="nobg">
