ændringer i sådan fungere det tekst

--- a/sadan-fungerer-det.html
+++ b/sadan-fungerer-det.html
@@ -81,7 +81,7 @@
         <h1 class="undersideh1">Sådan fungerer det</h1>
 
         <p class="info-sadan-fungerer-det">
-            Nedenfor kan du se rejsen for vores måltidskasser, <br> lige fra bestillingen til sorteringen af emballagen.
+            Nedenfor kan du se rejsen for vores måltidskasser,lige fra bestillingen til sorteringen af emballagen.
         </p>
         <p class="info-sadan-fungerer-det">Rul ned langs siden og følg rejsen.</p>
 
