--- a/din-kurv.html
+++ b/din-kurv.html
@@ -150,8 +150,8 @@
                 </a>
             </div>
             <div class="fortsaetknapper">
-                <button class="forsaet1">Fortsæt med at handle</button>
-                <button class="forsaet2">Fortsæt til<br>bestilling</button>
+                <button class="forsaet1">Fortsæt med<br>at handle</button>
+                <button onclick="location.href='succes.html';" class="forsaet2">Fortsæt til<br>bestilling</button>
             </div>
         </div>
 
