--- a/tilmeld-dig.html
+++ b/tilmeld-dig.html
@@ -79,25 +79,28 @@
     <main>
         <h1>Tilmeld dig</h1>
         <section id="tilmeld">
-        <h4>Er du allerede tilmeldt?</h4>
+            <h4>Er du allerede tilmeldt?</h4>
+            
             <section class="kanttil">
-            <h5>Log ind</h5>
-            <div class="meld">
-            <input type="text" placeholder="Brugernavn">
-            <input type="text" placeholder="Kodeord">
-            <button onclick="location.href='ups.html';" class="bestil">Log ind</button>
-            </div>
+                <h5>Log ind</h5>
+                <div class="meld">
+                    <input type="text" placeholder="Brugernavn">
+                    <input type="text" placeholder="Kodeord">
+                    <button onclick="location.href='ups.html';" class="opret" id="opret-bla">Log ind</button>
+                </div>
             </section>
+
             <h4>Er du ny hos os?</h4>
-            <section class="kanttilrod">
-            <h5>Opret dig</h5>
-            <div class="meld">
-            <input type="text" placeholder="Brugernavn">
-            <input type="text" placeholder="Kodeord">
-            <button onclick="location.href='ups.html';" class="opret">Opret</button>
-        </div>
+
+            <section class="kanttil" id="kanttilrod">
+                <h5>Opret dig</h5>
+                <div class="meld">
+                    <input type="text" placeholder="Brugernavn">
+                    <input type="text" placeholder="Kodeord">
+                    <button onclick="location.href='ups.html';" class="opret">Opret</button>
+                </div>
+            </section>
         </section>
-    </section>
 
     </main>
     <!-- main slut -->
