--- a/din-kurv.html
+++ b/din-kurv.html
@@ -140,7 +140,7 @@
                 <p>+ levering</p>
             </div>
             <div class="ikonerbund">
-                <a href="#">
+                <a href="byg-selv.html">
                     <img src="img/ikoner/bly.webp" alt="">
                     <p>Rediger ordre</p>
                 </a>
@@ -150,7 +150,7 @@
                 </a>
             </div>
             <div class="fortsaetknapper">
-                <button class="forsaet1">Fortsæt med<br>at handle</button>
+                <button onclick="location.href='byg-selv.html';" class="forsaet1">Fortsæt med<br>at handle</button>
                 <button onclick="location.href='succes.html';" class="forsaet2">Fortsæt til<br>bestilling</button>
             </div>
         </div>
