--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </section>
 
         <section class="kanta">
-            <a href="#">
+            <a href="ups.html">
             <div class="kantak">
                 <h2>Anmeldelser</h2>
                 <p>“Jeg prøvede Umi kassen med min roomie.
@@ -188,7 +188,7 @@
                     - Kathrine</p>
             </div>
             </a>
-            <a href="#">
+            <a href="ups.html">
             <div class="kantak">
                 <h2>B<span class="ae">ae</span>redygtighed</h2>
                 <img class="genbrugf" src="img/infographic/genbrug.webp" alt="Skraldespande">
